# SemantiTrace

./: .amltignore  .gitignore  README.md  pyproject.toml  requirements-real.txt  requirements.txt
configs/: amlt_semantitrace_cleanonly_caption_boundary_a100.yaml  amlt_semantitrace_cleanonly_robustness_a100.yaml  amlt_semantitrace_combined_a500_b500_1m_unique_retrieval.yaml  amlt_semantitrace_flux2_n500_textvqa_sharded.yaml  amlt_semantitrace_modeb_1m_unique_retrieval.yaml  amlt_semantitrace_modeb_llmquery_objecthook_retry_h100_parallel.yaml  amlt_semantitrace_modeb_llmquery_retry.yaml  amlt_semantitrace_modeb_llmquery_retry_h100.yaml  amlt_semantitrace_modeb_llmquery_retry_h100_parallel.yaml  amlt_semantitrace_modeb_llmquery_sceneaware_retry_h100_parallel.yaml  amlt_semantitrace_modeb_llmquery_sceneaware_v18_cleanonly_msrresrchvc_a100_parallel.yaml  amlt_semantitrace_modeb_llmquery_sceneaware_v18_retry_h100_parallel.yaml  amlt_semantitrace_modeb_llmquery_sceneaware_v18_retry_msrresrchvc_a100_parallel.yaml  amlt_semantitrace_modeb_scenehook_retry.yaml  amlt_semantitrace_n500_modeb_generation_fix_from_vllm_anchors.yaml  amlt_semantitrace_n500_modeb_specific_5jobs_tar_vllm.yaml  amlt_semantitrace_n_scaling_ab_1m_unique.yaml  amlt_semantitrace_phase3_modeaware_e2e.yaml  amlt_semantitrace_phase4_combined_caption_boundary.yaml  amlt_semantitrace_phase4_combined_ocr_defenses.yaml  amlt_semantitrace_phase4_modeb_defenses.yaml  amlt_semantitrace_table_xvii_ablation_n250.yaml  amlt_semantitrace_unique_1m_topk_export.yaml  default.yaml  main_experiment.yaml  (+9 more)
semantitrace/: rag.py  (+13 more)
(+75 files in other folders)
