[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantitrace"
version = "0.1.0"
description = "Reference implementation of SemantiTrace for multimodal RAG provenance auditing"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "scipy>=1.10",
  "tqdm>=4.65",
]

[project.optional-dependencies]
real = [
  "accelerate>=0.28",
  "datasets>=2.18",
  "diffusers>=0.30",
  "easyocr>=1.7",
  "faiss-cpu>=1.8",
  "lpips>=0.1",
  "openai>=1.0",
  "open-clip-torch>=2.24",
  "opencv-python>=4.8",
  "segment-anything>=1.0",
  "torch>=2.1",
  "transformers>=4.57",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["semantitrace*"]
